# Python_2026_mk2

./: README.md  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
app/: 0000_Home_Welcome.py  0001_Portfolio_Stage01_Upload_and_View.py  0001_Portfolio_Stage02_Watchlist_and_Research.py  0003_Stock_Portfolio.py  0003_Stock_Test_Stock_Compare.py  0003_Stock_YFinance_Plot.py  0098_About_About.py
data/: portfolio_stage01.json
utils/: utils.py  yf_symbols.py
